deployment/deployment.yaml
#| filename: "deployment/deployment.yaml"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mep-deployment
  labels:
    app: mise-en-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mise-en-prod
  template:
    metadata:
      labels:
        app: mise-en-prod
    spec:
      containers:
      - name: mise-en-prod
        image: marie678/mise_en_prod:v3.0.2
        ports:
        - containerPort: 8000
